--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>Tuhin S Samanta - Portfolio</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
@@ -97,7 +97,7 @@
         </div>
         <!-- Masthead Subheading-->
         <p class="masthead-subheading font-weight-light mb-0">
-          Automation - Python - Flutter - Machine Learning -
+          Automation - Python - Flutter - Machine Learning - NLP
         </p>
       </div>
     </header>
