index.html changed

--- a/index.html
+++ b/index.html
@@ -485,21 +485,22 @@
           <div class="col-lg-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Location</h4>
             <p class="lead mb-0">
-              2215 John Daniel Drive
+              Bengaluru 560037
               <br />
-              Clark, MO 65243
+              India
             </p>
           </div>
           <!-- Footer Social Icons-->
           <div class="col-lg-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Around the Web</h4>
-            <a class="btn btn-outline-light btn-social mx-1" href="#!"
-              ><i class="fab fa-fw fa-facebook-f"></i
+            <a
+              class="btn btn-outline-light btn-social mx-1"
+              href="https://github.com/tuhinssam"
+              ><i class="fab fa-fw fa-github"></i
             ></a>
-            <a class="btn btn-outline-light btn-social mx-1" href="#!"
-              ><i class="fab fa-fw fa-twitter"></i
-            ></a>
-            <a class="btn btn-outline-light btn-social mx-1" href="#!"
+            <a
+              class="btn btn-outline-light btn-social mx-1"
+              href="https://www.linkedin.com/in/tuhin-subhra-samanta-56466166/"
               ><i class="fab fa-fw fa-linkedin-in"></i
             ></a>
             <a class="btn btn-outline-light btn-social mx-1" href="#!"
@@ -522,7 +523,7 @@
     <!-- Copyright Section-->
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Copyright &copy; Your Website 2021</small>
+        <small>Copyright &copy; tuhinssam.github.io 2021</small>
       </div>
     </div>
     <!-- Portfolio Modals-->
