--- a/index.html
+++ b/index.html
@@ -325,14 +325,22 @@
               I am a curious learner. I try learning whatever comes on my way.
               Though I keep special interest on Data Science and Automation
               Technologies. I have implemented saveral Projects on Machine
-              Learning, Predictive analysis, Deep Learning and NLP.
+              Learning, Predictive analysis, Deep Learning and NLP. Other than
+              that I love blogging and travelling off-beat places. Please reach
+              out to me if you think I can assist you or your company in solving
+              any problem.
             </p>
           </div>
           <div class="col-lg-4 me-auto">
             <p class="lead">
-              Other than that I love blogging and travelling off-beat places.
-              Please reach out to me if you think I can assist you or your
-              company in solving any problem.
+              <b> Atlassian (Aug'20 to Now)</b><br />
+              Automation Engineer (SDE2) - Python, UiPath, NLP <br />
+              <b>UiPath (Nov'18 to Aug'20)<b> <br />
+              Product Consultant - UiPath, Python, ML, Analytics <br />
+              <b>Infosys Ltd. (Oct'15 to Nov'18)<b><br />
+              Senior Assoc Consultant C#, ClickSoftware UiPath <br />
+              <b>Ericsson India (Nov'12 to Sep'15)<b><br />
+              Intetegration Engineer - .NET, C#,ClickSoftware
             </p>
           </div>
         </div>
