--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
         <!-- Masthead Subheading-->
         <p class="masthead-subheading font-weight-light mb-0">
-          Automation - Python - Flutter - Machine Learning - NLP
+          Intelligent Automation - Python, C#, Java, Dart - Flutter - Machine Learning - NLP
         </p>
       </div>
     </header>
