--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
         </div>
         <!-- Masthead Subheading-->
         <p class="masthead-subheading font-weight-light mb-0">
-          Intelligent Automation - Python, C#, Java, Dart - Flutter - Machine Learning - NLP
+          Intelligent Automation - Python, C#, Java, Dart - Flutter - Machine
+          Learning - NLP
         </p>
       </div>
     </header>
@@ -334,12 +335,12 @@
           <div class="col-lg-4 me-auto">
             <p class="lead">
               <b> Atlassian (Aug'20 to Now)</b><br />
-              Automation Engineer (SDE2) - Python, UiPath, NLP <br />
-              <b>UiPath (Nov'18 to Aug'20)<b> <br />
+              Automation Engineer (SDE2) - Python, Java, UiPath, NLP <br />
+              <b>UiPath (Nov'18 to Aug'20)</b> <br />
               Product Consultant - UiPath, Python, ML, Analytics <br />
-              <b>Infosys Ltd. (Oct'15 to Nov'18)<b><br />
+              <b>Infosys Ltd. (Oct'15 to Nov'18)</b><br />
               Senior Assoc Consultant C#, ClickSoftware UiPath <br />
-              <b>Ericsson India (Nov'12 to Sep'15)<b><br />
+              <b>Ericsson India (Nov'12 to Sep'15)</b><br />
               Intetegration Engineer - .NET, C#,ClickSoftware
             </p>
           </div>
@@ -517,12 +518,12 @@
           </div>
           <!-- Footer About Text-->
           <div class="col-lg-4">
-            <h4 class="text-uppercase mb-4">About Freelancer</h4>
+            <h4 class="text-uppercase mb-4">About Website</h4>
             <p class="lead mb-0">
-              Freelance is a free to use, MIT licensed Bootstrap theme created
-              by
-              <a href="http://startbootstrap.com">Start Bootstrap</a>
-              .
+              Developed by Tuhin S Samanta
+              <a href="https://github.com/tuhinssam/tuhinssam.github.io"
+                >Find the project here</a
+              >
             </p>
           </div>
         </div>
