covi19-assist-bot details added

--- a/index.html
+++ b/index.html
@@ -333,6 +333,7 @@
             </p>
           </div>
           <div class="col-lg-4 me-auto">
+            <h4>Work Experiance</h4>
             <p class="lead">
               <b> Atlassian (Aug'20 to Now)</b><br />
               Automation Engineer (SDE2) - Python, Java, UiPath, NLP <br />
@@ -512,8 +513,10 @@
               href="https://www.linkedin.com/in/tuhin-subhra-samanta-56466166/"
               ><i class="fab fa-fw fa-linkedin-in"></i
             ></a>
-            <a class="btn btn-outline-light btn-social mx-1" href="#!"
-              ><i class="fab fa-fw fa-dribbble"></i
+            <a
+              class="btn btn-outline-light btn-social mx-1"
+              href="tuhinssam@gmail.com"
+              ><i class="fab fa-fw fa-email"></i
             ></a>
           </div>
           <!-- Footer About Text-->
@@ -566,7 +569,7 @@
                       mb-0
                     "
                   >
-                    Log Cabin
+                    covid19-assist-bot Intelligent Chatbot
                   </h2>
                   <!-- Icon Divider-->
                   <div class="divider-custom">
@@ -579,16 +582,27 @@
                   <!-- Portfolio Modal - Image-->
                   <img
                     class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/cabin.png"
+                    src="assets/img/portfolio/rasa.png"
                     alt="..."
                   />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Mollitia neque assumenda ipsam nihil, molestias magnam,
-                    recusandae quos quis inventore quisquam velit asperiores,
-                    vitae? Reprehenderit soluta, eos quod consequuntur itaque.
-                    Nam.
+                    Rasa is an open source framework to develop assistant or
+                    chatbot. The most important difference between other chatbot
+                    frameworks like Google DialogFlow, MS LUIS and Rasa it that,
+                    in Rasa all the development, training and testing in Rasa
+                    can be done locally and data remains private to the
+                    organization or the user. This Chatbot can answer basic
+                    questions on COVID-19 like what, when, how, additionally it
+                    can handle smalltalk,hit-chat capable of answering questions
+                    like nearest tesing centers, Hospitals, Free food facility,
+                    nearby shelter homes Can provide statistics based on
+                    districts or states in India Send mail to the user with all
+                    the details stores entire chat in MongoDB database. <br />
+                    Find the
+                    <a href="https://github.com/tuhinssam/covid19-rasa-chatbot">
+                      project link here
+                    </a>
                   </p>
                   <button
                     class="btn btn-primary"
