weather app details added

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="assets/img/portfolio/cabin.png"
+                src="assets/img/portfolio/rasa.png"
                 alt="..."
               />
             </div>
@@ -178,7 +178,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="assets/img/portfolio/cake.png"
+                src="assets/img/portfolio/weather-app.png"
                 alt="..."
               />
             </div>
@@ -322,6 +322,7 @@
         <!-- About Section Content-->
         <div class="row">
           <div class="col-lg-4 ms-auto">
+            <h5>A small Intro!</h5>
             <p class="lead">
               I am a curious learner. I try learning whatever comes on my way.
               Though I keep special interest on Data Science and Automation
@@ -333,7 +334,7 @@
             </p>
           </div>
           <div class="col-lg-4 me-auto">
-            <h4>Work Experiance</h4>
+            <h5>Work Experiances</h5>
             <p class="lead">
               <b> Atlassian (Aug'20 to Now)</b><br />
               Automation Engineer (SDE2) - Python, Java, UiPath, NLP <br />
@@ -535,7 +536,7 @@
     <!-- Copyright Section-->
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Copyright &copy; tuhinssam.github.io 2021</small>
+        <small>Copyright &copy; Tuhin S Samanta 2021</small>
       </div>
     </div>
     <!-- Portfolio Modals-->
@@ -592,17 +593,19 @@
                     frameworks like Google DialogFlow, MS LUIS and Rasa it that,
                     in Rasa all the development, training and testing in Rasa
                     can be done locally and data remains private to the
-                    organization or the user. This Chatbot can answer basic
-                    questions on COVID-19 like what, when, how, additionally it
-                    can handle smalltalk,hit-chat capable of answering questions
-                    like nearest tesing centers, Hospitals, Free food facility,
-                    nearby shelter homes Can provide statistics based on
-                    districts or states in India Send mail to the user with all
-                    the details stores entire chat in MongoDB database. <br />
+                    organization or the user. <br />This Chatbot can answer
+                    basic questions on COVID-19 like what, when, how,
+                    additionally it can handle smalltalk,hit-chat capable of
+                    answering questions like nearest tesing centers, Hospitals,
+                    Free food facility, nearby shelter homes Can provide
+                    statistics based on districts or states in India Send mail
+                    to the user with all the details stores entire chat in
+                    MongoDB database. <br />
                     Find the
                     <a href="https://github.com/tuhinssam/covid19-rasa-chatbot">
                       project link here
                     </a>
+                    in GitHub
                   </p>
                   <button
                     class="btn btn-primary"
@@ -649,7 +652,7 @@
                       mb-0
                     "
                   >
-                    Tasty Cake
+                    Flutter Weather App
                   </h2>
                   <!-- Icon Divider-->
                   <div class="divider-custom">
@@ -662,16 +665,32 @@
                   <!-- Portfolio Modal - Image-->
                   <img
                     class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/cake.png"
+                    src="assets/img/portfolio/weather-app.png"
                     alt="..."
                   />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Mollitia neque assumenda ipsam nihil, molestias magnam,
-                    recusandae quos quis inventore quisquam velit asperiores,
-                    vitae? Reprehenderit soluta, eos quod consequuntur itaque.
-                    Nam.
+                    weather app inspired by the beautiful designs made by Olia
+                    Gozha. By the end of the module, you'll be able to find out
+                    the live weather data in the current location of the device
+                    as well as the weather for any city you can think of!
+                    Features: <br />
+                    How to use Dart to perform asynchronous tasks.
+                    <br />Understand async and await. <br />Learn about Futures
+                    and how to work with them. <br />How to network with the
+                    Dart http package. <br />How to call APIs from Flutter to
+                    get data from the internet. <br />
+                    how to parse them using the Dart convert package. <br />How
+                    to pass data forwards and backwards between screens using
+                    the Navigator. <br />How to handle exceptions in Dart using
+                    try/catch/throw. <br />Learn about the lifecycle of Stateful
+                    Widgets and how to override them. <br />How to use the
+                    Geolocator package to get live location data for both iOS
+                    and Android. How to use the TextField Widget to take user
+                    input. <br/>
+                    Find the
+                    <a href="https://github.com/tuhinssam/covid19-rasa-chatbot">
+                      project link here
                   </p>
                   <button
                     class="btn btn-primary"
