--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                       mb-0
                     "
                   >
-                    covid19-assist-bot Intelligent Chatbot
+                    covid19-assist-bot: An Intelligent Chatbot
                   </h2>
                   <!-- Icon Divider-->
                   <div class="divider-custom">
@@ -652,7 +652,7 @@
                       mb-0
                     "
                   >
-                    Flutter Weather App
+                    Clima: A Flutter Weather App
                   </h2>
                   <!-- Icon Divider-->
                   <div class="divider-custom">
@@ -670,7 +670,7 @@
                   />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
-                    weather app inspired by the beautiful designs made by Olia
+                    This is an weather app inspired by the beautiful designs made by Olia
                     Gozha. By the end of the module, you'll be able to find out
                     the live weather data in the current location of the device
                     as well as the weather for any city you can think of!
@@ -689,8 +689,9 @@
                     and Android. How to use the TextField Widget to take user
                     input. <br/>
                     Find the
-                    <a href="https://github.com/tuhinssam/covid19-rasa-chatbot">
+                    <a href="https://github.com/tuhinssam/clima-flutter-app">
                       project link here
+                    <a/>in GitHub
                   </p>
                   <button
                     class="btn btn-primary"
