weather app details formatting added

--- a/index.html
+++ b/index.html
@@ -674,20 +674,19 @@
                     Gozha. By the end of the module, you'll be able to find out
                     the live weather data in the current location of the device
                     as well as the weather for any city you can think of!
-                    Features: <br />
+                    <br/>Features: <br />
                     How to use Dart to perform asynchronous tasks.
-                    <br />Understand async and await. <br />Learn about Futures
-                    and how to work with them. <br />How to network with the
-                    Dart http package. <br />How to call APIs from Flutter to
-                    get data from the internet. <br />
-                    how to parse them using the Dart convert package. <br />How
+                    Understand async and await. How to network with the
+                    Dart http package. How to call APIs from Flutter to
+                    get data from the internet. 
+                    how to parse them using the Dart convert package. How
                     to pass data forwards and backwards between screens using
-                    the Navigator. <br />How to handle exceptions in Dart using
-                    try/catch/throw. <br />Learn about the lifecycle of Stateful
-                    Widgets and how to override them. <br />How to use the
+                    the Navigator. How to handle exceptions in Dart using
+                    try/catch/throw. Learn about the lifecycle of Stateful
+                    Widgets and how to override them. How to use the
                     Geolocator package to get live location data for both iOS
                     and Android. How to use the TextField Widget to take user
-                    input. <br/>
+                    input. 
                     Find the
                     <a href="https://github.com/tuhinssam/clima-flutter-app">
                       project link here
