new project added

--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
                       mb-0
                     "
                   >
-                    Circus Tent
+                    DJango App
                   </h2>
                   <!-- Icon Divider-->
                   <div class="divider-custom">
@@ -755,11 +755,16 @@
                   />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Mollitia neque assumenda ipsam nihil, molestias magnam,
-                    recusandae quos quis inventore quisquam velit asperiores,
-                    vitae? Reprehenderit soluta, eos quod consequuntur itaque.
-                    Nam.
+                    This website is a demonstration of my Python Django 
+                    Project. It uses Python DJango as backend, Html, CSS
+                    and Bootstrap as frontend and PostgreSQL for database. 
+                    This website is hosted in Heroku Cloud and all media 
+                    and static files are hosted in AWS S3 bucket. 
+                    Website displays my Projects and Blogs and other information.
+                     Find the
+                    <a href="https://github.com/tuhinssam/MyPortfolioProject">
+                      project link here
+                    <a/>in GitHub
                   </p>
                   <button
                     class="btn btn-primary"
