--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
                       mb-0
                     "
                   >
-                    DJango App
+                    DJango Portfolio App
                   </h2>
                   <!-- Icon Divider-->
                   <div class="divider-custom">
@@ -750,7 +750,7 @@
                   <!-- Portfolio Modal - Image-->
                   <img
                     class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/circus.png"
+                    src="assets/img/portfolio/portfolio.jpeg"
                     alt="..."
                   />
                   <!-- Portfolio Modal - Text-->
@@ -761,7 +761,7 @@
                     This website is hosted in Heroku Cloud and all media 
                     and static files are hosted in AWS S3 bucket. 
                     Website displays my Projects and Blogs and other information.
-                     Find the
+                    <br/>Find the
                     <a href="https://github.com/tuhinssam/MyPortfolioProject">
                       project link here
                     <a/>in GitHub
