Flask tinyblog app added

--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
                       mb-0
                     "
                   >
-                    Controller
+                    Python Flask tinyblog app
                   </h2>
                   <!-- Icon Divider-->
                   <div class="divider-custom">
@@ -829,11 +829,24 @@
                   />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Mollitia neque assumenda ipsam nihil, molestias magnam,
-                    recusandae quos quis inventore quisquam velit asperiores,
-                    vitae? Reprehenderit soluta, eos quod consequuntur itaque.
-                    Nam.
+                    This is an interactive micro blogging application written using Flask Framework. Following are the functionalities, I have incorporated in the project:
+Already Implemented
+Registration with password hashing
+Login after registration, by verifying hashed password
+User can write a Blog in RichTextFormat and update, delete the blog
+User can change the password and basic information
+User can view all blogs writen by others
+User can see other blogger information
+Other Details:
+MySQL is used for database
+Flask_bootstrap is used for frontend design
+flask_ckeditor module used for rich text formatting experiance
+workzeug.security used for password hasing and de-hashing
+used python logging for logging module for logging purpose
+<br/>Find the
+                    <a href="https://github.com/tuhinssam/TinyBlogApp">
+                      project link here
+                    <a/>in GitHub
                   </p>
                   <button
                     class="btn btn-primary"
