circus icon changed

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="assets/img/portfolio/circus.png"
+                src="assets/img/portfolio/portfolio.jpeg"
                 alt="..."
               />
             </div>
